# ptools

./: .gitignore  .gitlab-ci.yml  .pylintrc  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  INSTALL.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build_test.yml
PyAttract/: attract.py  reduce.py  reduce_attract1.py  reduce_attract2.py  reduce_imc.py  reduce_scorpion.py
PyAttract/reduce_data/: imc.par
bindings/: _ptools.pyx  atomselection.pyx  attractforcefield.pyx  attractrigidbody.pyx  imc_lbfgs.pyx  imcforcefield.pyx  lbfgs.pyx  mcopff.pyx  multicopy.py  scorpionforcefield.pyx
dev/: Dockerfile  requirements_system.txt
docker/: Dockerfile  requirements_apt-get.txt  requirements_python.txt
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
headers/: attractforcefield.h  attractrigidbody.h  coordsarray.h  forcefield.h  imcforcefield.h  lbfgs_interface.h  mcopff.h  pdbio.h  rigidbody.h
imc_test/: attract.inp  mag1.red  mag2.red
ptools/: __init__.py  _typing.py  array3d.py  atom.py  atom_property.py  atomattrs.py  atomcollection.py  attract.py  coordinates.py  forcefield.py  grid.py  heligeom.py  linalg.py  logger.py  mcop.py  measure.py  namedarray.py  pairlist.py  particlecollection.py  rigidbody.py  selection.py  spatial.py  spelling.py  superpose.py  tables.py  transform.py
ptools/cli/: attract_cmd.py  header.py  logger.py  ptools_cli.py  reduce_cmd.py
ptools/data/: atom_rename_rules.yml
ptools/data/reduction_parameters/: attract1_protein_reduction_parameters.yml  attract1_reduction_parameters.yml  attract2_reduction_parameters.yml  scorpion_reduction_parameters.yml
ptools/io/: __init__.py  attract.py  exceptions.py  pdb.py  red.py
ptools/io/formatters/: mmcif.py  pdb.py  reduced.py
ptools/io/readers/: attract.py  attract_legacy.py  pdb.py  red.py
ptools/io/writers/: mmcif.py  pdb.py
ptools/linalg/: __init__.py  matrix.py  transform.py
ptools/pyattract/: __init__.py  attract.py  io.py
ptools/reduce/: __init__.py  bead.py  exceptions.py  reducer.py  residue.py
ptools/selection/: __init__.py  errors.py  precedenceparser.py  selectionparser.py
pyptools/: __init__.py  atom.py  forcefield.py  heligeom.py  io.py  pairlist.py  rigidbody.py  spatial.py  superpose.py
pyptools/pyattract/: attract.py  io.py
requirements/: base.txt  development.txt
src/: attractforcefield.cpp  attractrigidbody.cpp  imcforcefield.cpp  mcopff.cpp  rigidbody.cpp
src/minimizers/: lbfgs_interface.cpp
tests/: __init__.py  generators.py  test_array3d.py  test_atom.py  test_atomattrs.py  test_atomcollection.py  test_atomproperty.py  test_atompropertycollection.py  test_atompropertycontainer.py  test_attractrigidbody.py  test_baseatom.py  test_coordinates.py  test_forcefield.py  test_io.py  test_linalg.py  test_mcop.py  test_measure.py  test_namedarray.py  test_namedarraycontainer.py  test_pairlist.py  test_particle.py  test_particlecollection.py  test_pdb_formatter.py  test_pyptools.py  test_rigidbody.py  test_selection.py  test_spatial.py  test_spelling.py  test_superpose.py  test_transform.py
tests/attract/: __init__.py  test_attract.py  test_io.py  test_io_legacy.py
tests/attract/data/: attract_ligand.inp  ligand.red  receptor.red
tests/data/: distance_matrix.tcl  ff_parameters.np  test_10atoms.red
tests/data/mcop/: ligand.red  receptor.red
tests/generators/: __init__.py  atom.py  balloon.py  io.py  particlecollection.py  pdb.py  red.py
tests/heligeom/: test_heligeom.py
tests/io/: test_io_misc.py  test_pdb_reading.py  test_robust_pdb_builder.py
tests/linalg/: test_transform.py
tests/pyattract/: __init__.py  test_attract.py  test_io.py
tests/testing/: __init__.py  dummy.py  io.py  moreassert.py
(+10 files in other folders)
