[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
requires-python = ">=3.11"
name = "ptools"
version = "0.1.0"
description = "A fully pythonic library for building and analysing macromolecular assemblies."
readme = "README.rst"
license = {file = "LICENSE"}


dependencies = [
    "numpy",
    "scipy",
    "attrs",
    "PyYAML",
]

authors = [
  {name = "Benoist LAURENT"},
  {name = "Hubert SANTUZ"},
  {name = "Chantal PREVOST"},
  {name = "Charles ROBERT"},
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
"Homepage" = "https://github.com/ptools/ptools"


[project.scripts]
ptools = "ptools.cli.ptools_cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
