[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
requires-python = ">=3.11"
name = "ptools"
version = "0.1.0"
description = "A fully pythonic library for building and analysing macromolecular assemblies."
readme = "README.rst"
license = {file = "LICENSE"}

authors = [
  {name = "Benoist LAURENT"},
  {name = "Hubert SANTUZ"},
  {name = "Chantal PREVOST"},
  {name = "Charles ROBERT"},
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "attrs>=24.2.0",
    "numpy>=2.2.0",
    "pyyaml>=6.0.2",
    "scipy>=1.14.1",
]

[project.urls]
"Homepage" = "https://github.com/ptools/ptools"


[project.scripts]
ptools = "ptools.cli.ptools_cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
test = [
    "hypothesis>=6.122.3",
    "pytest>=8.3.4",
]
